--- a/public/views/partials/header.hbs
+++ b/public/views/partials/header.hbs
@@ -19,6 +19,9 @@
                         <a href="/contact">Contact</a>
                     </li>
                 </ul>
+                <div class="pull-right">
+                    <a href="/users/login" class="btn btn-sm btn-info">Login</a>
+                </div>
             </div>
         </div>
     </nav>
