--- a/public/views/partials/header.hbs
+++ b/public/views/partials/header.hbs
@@ -20,7 +20,13 @@
                     </li>
                 </ul>
                 <div class="pull-right">
+                    {{#if email}} Hello
+                    <b>{{email}}</b>
+                    {{/if}} {{#if isLoggedIn}}
+                    <a href="/users/logout" class="btn btn-sm btn-info">Logout</a>
+                    {{else}}
                     <a href="/users/login" class="btn btn-sm btn-info">Login</a>
+                    {{/if}}
                 </div>
             </div>
         </div>
